--- a/Prevu.Synoptics.V2150_Planeta/Details/D018.xaml
+++ b/Prevu.Synoptics.V2150_Planeta/Details/D018.xaml
@@ -4,9 +4,9 @@
              xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006" 
              xmlns:d="http://schemas.microsoft.com/expression/blend/2008" 
              xmlns:local="clr-namespace:Prevu.Synoptics"
-						 xmlns:Machines="clr-namespace:Prevu.Drawings.Machines;assembly=Prevu.Drawings" 
+			 xmlns:Machines="clr-namespace:Prevu.Drawings.Machines;assembly=Prevu.Drawings" 
              xmlns:Labels="clr-namespace:Prevu.UIComponents.Labels;assembly=Prevu.UIComponents" 
-             xmlns:Separation="clr-namespace:Prevu.Drawings.Machines.Separation;assembly=Prevu.Drawings" x:Class="Prevu.Synoptics.D018" 
+             x:Class="Prevu.Synoptics.D018" 
              mc:Ignorable="d" 
              
              d:Background="{DynamicResource MaterialDesignPaper}" >
@@ -51,10 +51,6 @@
                 </TransformGroup>
             </Machines:CV_Valve.RenderTransform>
         </Machines:CV_Valve>
-        <Labels:DeviceLabel 
-            ComponentName="018-21-CV1" Canvas.Left="17" Canvas.Top="35" HorizontalAlignment="Left" VerticalAlignment="Center"/>
-        <Labels:DeviceLabel 
-            ComponentName="018-21-CV2" Height="50" Canvas.Left="229" Canvas.Top="35" HorizontalAlignment="Left" VerticalAlignment="Center"/>
         <Machines:CV_Valve RenderTransformOrigin="0.5,0.5" Height="48" Width="56" Canvas.Left="169" Canvas.Top="39" HorizontalAlignment="Left" VerticalAlignment="Center">
             <Machines:CV_Valve.RenderTransform>
                 <TransformGroup>
@@ -75,5 +71,7 @@
                 </TransformGroup>
             </Rectangle.RenderTransform>
         </Rectangle>
+        <Labels:DeviceLabel ComponentName="018-21-CV1" Canvas.Left="17" Canvas.Top="35" HorizontalAlignment="Left" VerticalAlignment="Center"/>
+        <Labels:DeviceLabel ComponentName="018-21-CV2" Height="50" Canvas.Left="229" Canvas.Top="35" HorizontalAlignment="Left" VerticalAlignment="Center"/>
     </Canvas>
 </UserControl>
