--- a/Prevu.Synoptics.V2150_Planeta/Details/D527.xaml
+++ b/Prevu.Synoptics.V2150_Planeta/Details/D527.xaml
@@ -4,17 +4,15 @@
              xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006" 
              xmlns:d="http://schemas.microsoft.com/expression/blend/2008" 
              xmlns:local="clr-namespace:Prevu.Synoptics"
-						 xmlns:Machines="clr-namespace:Prevu.Drawings.Machines;assembly=Prevu.Drawings" 
+			 xmlns:Machines="clr-namespace:Prevu.Drawings.Machines;assembly=Prevu.Drawings" 
              xmlns:Labels="clr-namespace:Prevu.UIComponents.Labels;assembly=Prevu.UIComponents" 
              mc:Ignorable="d" 
              d:Background="{DynamicResource MaterialDesignPaper}" >
     <Canvas Height="326" Width="283">
         <Machines:V01_Hopper Canvas.Left="13" Canvas.Top="13" Height="300" Width="260" HorizontalAlignment="Left" VerticalAlignment="Center"/>
         <Labels:SignalLabel HorizontalAlignment="Left" VerticalAlignment="Center" ComponentName="527-61-LEV" SignalName="LSHA" Canvas.Left="147" Canvas.Top="33" />
-        <Labels:DeviceLabel HorizontalAlignment="Left" 
-		VerticalAlignment="Center" 
-		ComponentName="527-61-LEV" Canvas.Left="28" Canvas.Top="112"/>
         <Labels:SignalLabel ComponentName="527-61-LEV" SignalName="LSH" Canvas.Left="147" Canvas.Top="96" HorizontalAlignment="Left" VerticalAlignment="Center" />
         <Labels:SignalLabel ComponentName="527-61-LEV" SignalName="LSL" Canvas.Left="147" Canvas.Top="228" HorizontalAlignment="Left" VerticalAlignment="Center" />
+        <Labels:DeviceLabel HorizontalAlignment="Left" VerticalAlignment="Center" ComponentName="527-61-LEV" Canvas.Left="28" Canvas.Top="112"/>
     </Canvas>
 </UserControl>
