--- a/Prevu.Synoptics.V2150_Planeta/Details/D890.xaml
+++ b/Prevu.Synoptics.V2150_Planeta/Details/D890.xaml
@@ -4,9 +4,9 @@
              xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006" 
              xmlns:d="http://schemas.microsoft.com/expression/blend/2008" 
              xmlns:local="clr-namespace:Prevu.Synoptics"
-						 xmlns:Machines="clr-namespace:Prevu.Drawings.Machines;assembly=Prevu.Drawings" 
+			 xmlns:Machines="clr-namespace:Prevu.Drawings.Machines;assembly=Prevu.Drawings" 
              xmlns:Labels="clr-namespace:Prevu.UIComponents.Labels;assembly=Prevu.UIComponents" 
-             xmlns:Separation="clr-namespace:Prevu.Drawings.Machines.Separation;assembly=Prevu.Drawings" xmlns:FlakesSorting="clr-namespace:Prevu.Drawings.Machines.FlakesSorting;assembly=Prevu.Drawings" x:Class="Prevu.Synoptics.D890" 
+             x:Class="Prevu.Synoptics.D890" 
              mc:Ignorable="d" 
               d:Background="{DynamicResource MaterialDesignPaper}">
     <Canvas Height="427" Width="452">
@@ -17,12 +17,8 @@
         <Labels:SignalLabel HorizontalAlignment="Center" VerticalAlignment="Top" ComponentName="890-61-LEV" SignalName="LSHA" Canvas.Left="307" Canvas.Top="39"/>
         <Labels:SignalLabel HorizontalAlignment="Center" VerticalAlignment="Top" ComponentName="890-61-LEV" SignalName="LSH" Canvas.Left="307" Canvas.Top="94" />
         <Labels:SignalLabel HorizontalAlignment="Center" VerticalAlignment="Top" ComponentName="890-61-LEV" SignalName="LSL" Canvas.Left="307" Canvas.Top="185"/>
-        <Labels:DeviceLabel HorizontalAlignment="Center" 
-         VerticalAlignment="Top" 
-         ComponentName="890-61-LEV" Canvas.Left="77" Canvas.Top="219"/>
-        <Labels:DeviceLabel HorizontalAlignment="Center" 
-            VerticalAlignment="Top" 
-            ComponentName="890-62-LEV" Canvas.Left="285" Canvas.Top="219"/>
         <Labels:SignalLabel ComponentName="890-61-LEV" SignalName="LSHA2" Canvas.Left="159" Canvas.Top="39" HorizontalAlignment="Center" VerticalAlignment="Center"/>
+        <Labels:DeviceLabel HorizontalAlignment="Center" VerticalAlignment="Top" ComponentName="890-61-LEV" Canvas.Left="77" Canvas.Top="219"/>
+        <Labels:DeviceLabel HorizontalAlignment="Center" VerticalAlignment="Top" ComponentName="890-62-LEV" Canvas.Left="285" Canvas.Top="219"/>
     </Canvas>
 </UserControl>
