--- a/Prevu.Synoptics.V2150_Planeta/Pages/P340.xaml
+++ b/Prevu.Synoptics.V2150_Planeta/Pages/P340.xaml
@@ -10,7 +10,7 @@
              x:Class="Prevu.Synoptics.P340" mc:Ignorable="d" 
              Height="850" Width="1550" d:Background="{DynamicResource MaterialDesignPaper}">
     <Canvas>
-        <Labels:Pipe Width="164" StatusComponent="278-01-MA1" PipeHeight="Medium" Height="22" Canvas.Left="191" Canvas.Top="142" HorizontalAlignment="Center" VerticalAlignment="Top" RenderTransformOrigin="0.5,0.5" VisibilityComponent="279-21-CV1" VisibilitySignal="LS2" >
+        <Labels:Pipe Width="164" StatusComponent="278-01-MA1" PipeHeight="Medium" Canvas.Left="191" Canvas.Top="148" HorizontalAlignment="Center" VerticalAlignment="Top" RenderTransformOrigin="0.5,0.5" VisibilityComponent="279-21-CV1" VisibilitySignal="LS2" >
             <Labels:Pipe.RenderTransform>
                 <TransformGroup>
                     <ScaleTransform/>
@@ -20,7 +20,7 @@
                 </TransformGroup>
             </Labels:Pipe.RenderTransform>
         </Labels:Pipe>
-        <Labels:Pipe Width="82" StatusComponent="298-01-MA1" PipeHeight="Medium" Height="22" Canvas.Left="201" Canvas.Top="182" HorizontalAlignment="Center" VerticalAlignment="Top" RenderTransformOrigin="0.5,0.5" VisibilityComponent="299-21-CV1" VisibilitySignal="LS2" >
+        <Labels:Pipe Width="82" StatusComponent="298-01-MA1" PipeHeight="Medium" Canvas.Left="201" Canvas.Top="188" HorizontalAlignment="Center" VerticalAlignment="Top" RenderTransformOrigin="0.5,0.5" VisibilityComponent="299-21-CV1" VisibilitySignal="LS2" >
             <Labels:Pipe.RenderTransform>
                 <TransformGroup>
                     <ScaleTransform/>
@@ -51,20 +51,11 @@
                 </TransformGroup>
             </Labels:Pipe.RenderTransform>
         </Labels:Pipe>
-        <Labels:Pipe Width="162" RenderTransformOrigin="0.5,0.5" Color="Water" StatusComponent="373-01-MA1" Height="6" Canvas.Left="728" Canvas.Top="355" HorizontalAlignment="Left" VerticalAlignment="Center">
-            <Labels:Pipe.RenderTransform>
-                <TransformGroup>
-                    <ScaleTransform/>
-                    <SkewTransform/>
-                    <RotateTransform Angle="0"/>
-                    <TranslateTransform/>
-                </TransformGroup>
-            </Labels:Pipe.RenderTransform>
-        </Labels:Pipe>
+        <Labels:Pipe Width="162" RenderTransformOrigin="0.5,0.5" Color="Water" StatusComponent="373-01-MA1" Canvas.Left="728" Canvas.Top="355" HorizontalAlignment="Center" VerticalAlignment="Top"/>
         <Labels:Pipe Width="553" StatusComponent="341-01-MA1" PipeHeight="Medium" Canvas.Left="887" Canvas.Top="742" HorizontalAlignment="Left" VerticalAlignment="Center"/>
-        <Labels:Pipe Width="126" StatusComponent="298-01-MA1" PipeHeight="Medium" Height="22" Canvas.Left="121" Canvas.Top="146" HorizontalAlignment="Center" VerticalAlignment="Top" VisibilityComponent="299-21-CV1" VisibilitySignal="LS2" />
-        <Labels:Pipe Width="180" StatusComponent="278-01-MA1" PipeHeight="Medium" Height="22" Canvas.Left="97" Canvas.Top="65" HorizontalAlignment="Left" VerticalAlignment="Center" VisibilityComponent="279-21-CV1" VisibilitySignal="LS2" />
-        <Labels:Pipe Width="144" StatusComponent="311-DISCHARGE" PipeHeight="Medium" Height="22" Canvas.Left="357" Canvas.Top="534" HorizontalAlignment="Center" VerticalAlignment="Top" RenderTransformOrigin="0.5,0.5" >
+        <Labels:Pipe Width="126" StatusComponent="298-01-MA1" PipeHeight="Medium" Canvas.Left="121" Canvas.Top="152" HorizontalAlignment="Center" VerticalAlignment="Top" VisibilityComponent="299-21-CV1" VisibilitySignal="LS2" />
+        <Labels:Pipe Width="180" StatusComponent="278-01-MA1" PipeHeight="Medium" Canvas.Left="97" Canvas.Top="71" HorizontalAlignment="Center" VerticalAlignment="Top" VisibilityComponent="279-21-CV1" VisibilitySignal="LS2" />
+        <Labels:Pipe Width="144" StatusComponent="311-DISCHARGE" PipeHeight="Medium" Canvas.Left="357" Canvas.Top="540" HorizontalAlignment="Center" VerticalAlignment="Top" RenderTransformOrigin="0.5,0.5" >
             <Labels:Pipe.RenderTransform>
                 <TransformGroup>
                     <ScaleTransform/>
@@ -74,7 +65,7 @@
                 </TransformGroup>
             </Labels:Pipe.RenderTransform>
         </Labels:Pipe>
-        <Labels:Pipe HorizontalAlignment="Center" VerticalAlignment="Top" Width="166" StatusComponent="316-01-MA1" PipeHeight="Medium" Height="22" Canvas.Left="193" Canvas.Top="683" RenderTransformOrigin="0.5,0.5" >
+        <Labels:Pipe HorizontalAlignment="Center" VerticalAlignment="Top" Width="166" StatusComponent="316-01-MA1" PipeHeight="Medium" Canvas.Left="193" Canvas.Top="688" RenderTransformOrigin="0.5,0.5" >
             <Labels:Pipe.RenderTransform>
                 <TransformGroup>
                     <ScaleTransform/>
@@ -84,8 +75,8 @@
                 </TransformGroup>
             </Labels:Pipe.RenderTransform>
         </Labels:Pipe>
-        <Labels:Pipe Width="304" StatusComponent="318-01-MA1" PipeHeight="Medium" Height="22" Canvas.Left="576" Canvas.Top="72" HorizontalAlignment="Left" VerticalAlignment="Center"/>
-        <Labels:Pipe Width="72" StatusComponent="318-01-MA1" PipeHeight="Medium" Height="22" RenderTransformOrigin="0.5,0.5" Canvas.Left="840" Canvas.Top="103" HorizontalAlignment="Left" VerticalAlignment="Center">
+        <Labels:Pipe Width="304" StatusComponent="318-01-MA1" PipeHeight="Medium" Canvas.Left="576" Canvas.Top="78" HorizontalAlignment="Center" VerticalAlignment="Top"/>
+        <Labels:Pipe Width="72" StatusComponent="318-01-MA1" PipeHeight="Medium" RenderTransformOrigin="0.5,0.5" Canvas.Left="840" Canvas.Top="109" HorizontalAlignment="Center" VerticalAlignment="Top">
             <Labels:Pipe.RenderTransform>
                 <TransformGroup>
                     <ScaleTransform/>
@@ -95,7 +86,7 @@
                 </TransformGroup>
             </Labels:Pipe.RenderTransform>
         </Labels:Pipe>
-        <Labels:Pipe RenderTransformOrigin="0.5,0.5" Width="296" StatusComponent="338-01-MA1" PipeHeight="Medium" Height="18" VisibilityComponent="338-21-CV1" VisibilitySignal="LS1" Canvas.Left="755" Canvas.Top="394" HorizontalAlignment="Center" VerticalAlignment="Top">
+        <Labels:Pipe RenderTransformOrigin="0.5,0.5" Width="296" StatusComponent="338-01-MA1" PipeHeight="Medium" VisibilityComponent="338-21-CV1" VisibilitySignal="LS1" Canvas.Left="755" Canvas.Top="396" HorizontalAlignment="Center" VerticalAlignment="Top">
             <Labels:Pipe.RenderTransform>
                 <TransformGroup>
                     <ScaleTransform/>
@@ -115,7 +106,7 @@
                 </TransformGroup>
             </Labels:Pipe.RenderTransform>
         </Labels:Pipe>
-        <Labels:Pipe Width="68" StatusComponent="338-01-MA1" PipeHeight="Medium" RenderTransformOrigin="0.5,0.5" Height="22" VisibilitySignal="LS1" VisibilityComponent="338-21-CV1" Canvas.Left="869" Canvas.Top="179" HorizontalAlignment="Center" VerticalAlignment="Top">
+        <Labels:Pipe Width="68" StatusComponent="338-01-MA1" PipeHeight="Medium" RenderTransformOrigin="0.5,0.5" VisibilitySignal="LS1" VisibilityComponent="338-21-CV1" Canvas.Left="869" Canvas.Top="183" HorizontalAlignment="Center" VerticalAlignment="Top">
             <Labels:Pipe.RenderTransform>
                 <TransformGroup>
                     <ScaleTransform/>
@@ -125,18 +116,9 @@
                 </TransformGroup>
             </Labels:Pipe.RenderTransform>
         </Labels:Pipe>
-        <Labels:Pipe Width="237" StatusComponent="338-01-MA1" PipeHeight="Medium" Height="21" Canvas.Left="1069" Canvas.Top="143" HorizontalAlignment="Left" VerticalAlignment="Center" VisibilityComponent="338-21-CV1" VisibilitySignal="LS2"/>
-        <Labels:Pipe Width="283" RenderTransformOrigin="0.5,0.5" Color="Water" StatusComponent="373-01-MA1" Height="6" Canvas.Left="916" Canvas.Top="355" HorizontalAlignment="Left" VerticalAlignment="Center">
-            <Labels:Pipe.RenderTransform>
-                <TransformGroup>
-                    <ScaleTransform/>
-                    <SkewTransform/>
-                    <RotateTransform Angle="0"/>
-                    <TranslateTransform/>
-                </TransformGroup>
-            </Labels:Pipe.RenderTransform>
-        </Labels:Pipe>
-        <Labels:Pipe Width="282" StatusComponent="338-01-MA1" PipeHeight="Medium" RenderTransformOrigin="0.5,0.5" Height="22" Canvas.Left="1160" Canvas.Top="283" HorizontalAlignment="Left" VerticalAlignment="Center" VisibilityComponent="338-21-CV1" VisibilitySignal="LS2">
+        <Labels:Pipe Width="237" StatusComponent="338-01-MA1" PipeHeight="Medium" Canvas.Left="1069" Canvas.Top="148" HorizontalAlignment="Center" VerticalAlignment="Top" VisibilityComponent="338-21-CV1" VisibilitySignal="LS2"/>
+        <Labels:Pipe Width="283" RenderTransformOrigin="0.5,0.5" Color="Water" StatusComponent="373-01-MA1" Canvas.Left="916" Canvas.Top="355" HorizontalAlignment="Left" VerticalAlignment="Center"/>
+        <Labels:Pipe Width="282" StatusComponent="338-01-MA1" PipeHeight="Medium" RenderTransformOrigin="0.5,0.5" Canvas.Left="1160" Canvas.Top="284" HorizontalAlignment="Center" VerticalAlignment="Top" VisibilityComponent="338-21-CV1" VisibilitySignal="LS2">
             <Labels:Pipe.RenderTransform>
                 <TransformGroup>
                     <ScaleTransform/>
@@ -147,7 +129,7 @@
             </Labels:Pipe.RenderTransform>
         </Labels:Pipe>
         <Labels:Pipe Width="80" StatusComponent="346-01-MA1" PipeHeight="Medium" Canvas.Left="1288" Canvas.Top="618" HorizontalAlignment="Left" VerticalAlignment="Center"/>
-        <Labels:Pipe Width="694" StatusComponent="318-01-MA1" PipeHeight="Medium" Height="22" Canvas.Left="234" Canvas.Top="416" HorizontalAlignment="Left" VerticalAlignment="Center" RenderTransformOrigin="0.5,0.5" >
+        <Labels:Pipe Width="694" StatusComponent="318-01-MA1" PipeHeight="Medium" Canvas.Left="234" Canvas.Top="421" HorizontalAlignment="Center" VerticalAlignment="Top" RenderTransformOrigin="0.5,0.5" >
             <Labels:Pipe.RenderTransform>
                 <TransformGroup>
                     <ScaleTransform/>
@@ -157,7 +139,7 @@
                 </TransformGroup>
             </Labels:Pipe.RenderTransform>
         </Labels:Pipe>
-        <Labels:Pipe Width="184" StatusComponent="318-01-MA1" PipeHeight="Medium" Height="22" Canvas.Left="402" Canvas.Top="759" HorizontalAlignment="Left" VerticalAlignment="Center" />
+        <Labels:Pipe Width="184" StatusComponent="318-01-MA1" PipeHeight="Medium" Canvas.Left="402" Canvas.Top="765" HorizontalAlignment="Center" VerticalAlignment="Top" />
         <Machines:V01_SLX_Silo Canvas.Left="192" Canvas.Top="181" Height="294" Width="219" HorizontalAlignment="Center" VerticalAlignment="Top" ComponentName="310-41-LT1" TrendName="LEVEL" Color="DryMaterial"/>
         <Machines:SCW_ScrewConveyor_straight HorizontalAlignment="Center"  VerticalAlignment="Top" Height="22" Width="180" Canvas.Left="267" Canvas.Top="606"/>
         <Machines:SCW_ScrewConveyor_straight Height="22" Width="166" Canvas.Left="265" Canvas.Top="759" HorizontalAlignment="Center" VerticalAlignment="Top"/>
@@ -175,49 +157,21 @@
                 </TransformGroup>
             </Machines:CV_Valve.RenderTransform>
         </Machines:CV_Valve>
-        <Machines:SCW_ScrewConveyor_straight RenderTransformOrigin="0.5,0.5" Width="226" Height="18" Canvas.Left="862" Canvas.Top="143" HorizontalAlignment="Left" VerticalAlignment="Center" >
-            <Machines:SCW_ScrewConveyor_straight.RenderTransform>
-                <TransformGroup>
-                    <ScaleTransform/>
-                    <SkewTransform/>
-                    <RotateTransform Angle="0"/>
-                    <TranslateTransform/>
-                </TransformGroup>
-            </Machines:SCW_ScrewConveyor_straight.RenderTransform>
-        </Machines:SCW_ScrewConveyor_straight>
-        <Labels:JumpLabel HorizontalAlignment="Left" 
-            VerticalAlignment="Center" 
-            JumpFromLabel="310-41-LT1" 
-            JumpToLabel="279-21-CV1" Canvas.Left="29" Canvas.Top="41" />
-        <Labels:JumpLabel 
-            JumpFromLabel="310-41-LT1" 
-            JumpToLabel="299-21-CV1" Canvas.Left="64" Canvas.Top="122" HorizontalAlignment="Center" VerticalAlignment="Top" />
-        <Labels:JumpLabel 
-            JumpFromLabel="340-WASHING" 
-            JumpToLabel="350-01-MA1" Canvas.Left="1431" Canvas.Top="703" HorizontalAlignment="Left" VerticalAlignment="Center"/>
-        <Labels:JumpLabel 
-            JumpFromLabel="340-WASHING" 
-            JumpToLabel="354-HEAT" Canvas.Left="650" Canvas.Top="323" HorizontalAlignment="Left" VerticalAlignment="Center"/>
+        <Machines:SCW_ScrewConveyor_straight RenderTransformOrigin="0.5,0.5" Width="226" Height="18" Canvas.Left="862" Canvas.Top="143" HorizontalAlignment="Left" VerticalAlignment="Center" />
+        <Labels:JumpLabel HorizontalAlignment="Left" VerticalAlignment="Center" JumpFromLabel="310-41-LT1" JumpToLabel="279-21-CV1" Canvas.Left="29" Canvas.Top="41" />
+        <Labels:JumpLabel JumpFromLabel="310-41-LT1" JumpToLabel="299-21-CV1" Canvas.Left="64" Canvas.Top="122" HorizontalAlignment="Center" VerticalAlignment="Top" />
+        <Labels:JumpLabel JumpFromLabel="340-WASHING" JumpToLabel="350-01-MA1" Canvas.Left="1431" Canvas.Top="703" HorizontalAlignment="Left" VerticalAlignment="Center"/>
+        <Labels:JumpLabel JumpFromLabel="340-WASHING" JumpToLabel="354-HEAT" Canvas.Left="650" Canvas.Top="323" HorizontalAlignment="Left" VerticalAlignment="Center"/>
         <Labels:DetailsLabel ComponentName="340-VIEW" DetailsPageName="D340" Canvas.Left="821" Canvas.Top="696" HorizontalAlignment="Left" VerticalAlignment="Center"/>
         <Labels:DetailsLabel ComponentName="345-VIEW" DetailsPageName="D345" Canvas.Left="1222" Canvas.Top="572" HorizontalAlignment="Left" VerticalAlignment="Center"/>
         <Labels:DetailsLabel ComponentName="311-VIEW" DetailsPageName="D311" Canvas.Left="487" Canvas.Top="403" HorizontalAlignment="Left" VerticalAlignment="Center" HideComponentName="True"/>
-        <Labels:DeviceLabel HorizontalAlignment="Center" 
-            VerticalAlignment="Top" 
-            ComponentName="316-01-MA1" Canvas.Left="206" Canvas.Top="551" />
-        <Labels:DeviceLabel 
-            ComponentName="318-01-MA1" Canvas.Left="402" Canvas.Top="700" HorizontalAlignment="Center" VerticalAlignment="Top" />
-        <Labels:DeviceLabel HorizontalAlignment="Center" 
-            VerticalAlignment="Top" 
-            ComponentName="310-41-LT1" Canvas.Left="376" Canvas.Top="123"/>
-        <Labels:DeviceLabel 
-            ComponentName="340-MIXER" Canvas.Left="802" Canvas.Top="633" HorizontalAlignment="Center" VerticalAlignment="Top"/>
-        <Labels:DeviceLabel 
-            ComponentName="338-21-CV1" Canvas.Left="790" Canvas.Top="212" HorizontalAlignment="Center" VerticalAlignment="Top"/>
-        <Labels:DeviceLabel 
-            ComponentName="338-01-MA1" Canvas.Left="1041" Canvas.Top="87" HorizontalAlignment="Left" VerticalAlignment="Center"/>
-        <Labels:DeviceLabel 
-            ComponentName="345-MIXER" Canvas.Left="1203" Canvas.Top="509" HorizontalAlignment="Center" VerticalAlignment="Top"/>
-        <Labels:DeviceLabel 
-            ComponentName="311-DISCHARGE" Canvas.Left="388" Canvas.Top="403" HorizontalAlignment="Left" VerticalAlignment="Center" />
+        <Labels:DeviceLabel HorizontalAlignment="Center" VerticalAlignment="Top" ComponentName="316-01-MA1" Canvas.Left="206" Canvas.Top="551" />
+        <Labels:DeviceLabel ComponentName="318-01-MA1" Canvas.Left="402" Canvas.Top="700" HorizontalAlignment="Center" VerticalAlignment="Top" />
+        <Labels:DeviceLabel HorizontalAlignment="Center" VerticalAlignment="Top" ComponentName="310-41-LT1" Canvas.Left="376" Canvas.Top="123"/>
+        <Labels:DeviceLabel ComponentName="340-MIXER" Canvas.Left="802" Canvas.Top="633" HorizontalAlignment="Center" VerticalAlignment="Top"/>
+        <Labels:DeviceLabel ComponentName="338-21-CV1" Canvas.Left="790" Canvas.Top="212" HorizontalAlignment="Center" VerticalAlignment="Top"/>
+        <Labels:DeviceLabel ComponentName="338-01-MA1" Canvas.Left="1041" Canvas.Top="87" HorizontalAlignment="Left" VerticalAlignment="Center"/>
+        <Labels:DeviceLabel ComponentName="345-MIXER" Canvas.Left="1203" Canvas.Top="509" HorizontalAlignment="Center" VerticalAlignment="Top"/>
+        <Labels:DeviceLabel ComponentName="311-DISCHARGE" Canvas.Left="388" Canvas.Top="403" HorizontalAlignment="Left" VerticalAlignment="Center" />
     </Canvas>
 </UserControl>
