--- a/Prevu.Synoptics.V2150_Planeta/Pages/P460.xaml
+++ b/Prevu.Synoptics.V2150_Planeta/Pages/P460.xaml
@@ -4,8 +4,7 @@
              xmlns:d="http://schemas.microsoft.com/expression/blend/2008" 
              xmlns:local="clr-namespace:Prevu.Synoptics"
              xmlns:Machines="clr-namespace:Prevu.Drawings.Machines;assembly=Prevu.Drawings" 
-             xmlns:Labels="clr-namespace:Prevu.UIComponents.Labels;assembly=Prevu.UIComponents" 
-             xmlns:Blowers="clr-namespace:Prevu.Drawings.Machines.Blowers;assembly=Prevu.Drawings" 
+             xmlns:Labels="clr-namespace:Prevu.UIComponents.Labels;assembly=Prevu.UIComponents"
              x:Class="Prevu.Synoptics.P460" mc:Ignorable="d" 
              Height="850" Width="1550" d:Background="{DynamicResource MaterialDesignPaper}">
     <Canvas>
@@ -74,16 +73,7 @@
                 </TransformGroup>
             </Labels:Pipe.RenderTransform>
         </Labels:Pipe>
-        <Labels:Pipe HorizontalAlignment="Left" VerticalAlignment="Center" Color="Water" Width="111" RenderTransformOrigin="0.5,0.5" StatusComponent="477-01-MA1" VisibilityComponent="477-21-CV1" Canvas.Left="754" Canvas.Top="497">
-            <Labels:Pipe.RenderTransform>
-                <TransformGroup>
-                    <ScaleTransform/>
-                    <SkewTransform/>
-                    <RotateTransform Angle="0"/>
-                    <TranslateTransform/>
-                </TransformGroup>
-            </Labels:Pipe.RenderTransform>
-        </Labels:Pipe>
+        <Labels:Pipe HorizontalAlignment="Left" VerticalAlignment="Center" Color="Water" Width="111" RenderTransformOrigin="0.5,0.5" StatusComponent="477-01-MA1" VisibilityComponent="477-21-CV1" Canvas.Left="754" Canvas.Top="497"/>
         <Labels:Pipe HorizontalAlignment="Left" VerticalAlignment="Center" Color="Water" Width="194" RenderTransformOrigin="0.5,0.5" StatusComponent="477-01-MA1" VisibilityComponent="477-21-CV1" Canvas.Left="659" Canvas.Top="592">
             <Labels:Pipe.RenderTransform>
                 <TransformGroup>
@@ -100,21 +90,12 @@
                 <TransformGroup>
                     <ScaleTransform/>
                     <SkewTransform/>
-                    <RotateTransform Angle="89.9"/>
+                    <RotateTransform Angle="90"/>
                     <TranslateTransform/>
                 </TransformGroup>
             </Labels:Pipe.RenderTransform>
         </Labels:Pipe>
-        <Labels:Pipe HorizontalAlignment="Left" VerticalAlignment="Center" Color="Water" Width="201" RenderTransformOrigin="0.5,0.5" StatusComponent="477-01-MA1" VisibilityComponent="477-21-CV1" Canvas.Left="936" Canvas.Top="452">
-            <Labels:Pipe.RenderTransform>
-                <TransformGroup>
-                    <ScaleTransform/>
-                    <SkewTransform/>
-                    <RotateTransform Angle="0"/>
-                    <TranslateTransform/>
-                </TransformGroup>
-            </Labels:Pipe.RenderTransform>
-        </Labels:Pipe>
+        <Labels:Pipe HorizontalAlignment="Left" VerticalAlignment="Center" Color="Water" Width="201" RenderTransformOrigin="0.5,0.5" StatusComponent="477-01-MA1" VisibilityComponent="477-21-CV1" Canvas.Left="936" Canvas.Top="452"/>
         <Labels:Pipe HorizontalAlignment="Left" VerticalAlignment="Center" Color="Water" Width="28" RenderTransformOrigin="0.5,0.5" StatusComponent="477-01-MA1" VisibilityComponent="477-21-CV1" Canvas.Left="924" Canvas.Top="464">
             <Labels:Pipe.RenderTransform>
                 <TransformGroup>
@@ -125,16 +106,7 @@
                 </TransformGroup>
             </Labels:Pipe.RenderTransform>
         </Labels:Pipe>
-        <Labels:Pipe HorizontalAlignment="Left" VerticalAlignment="Center" Width="50" StatusComponent="464-01-MA1" RenderTransformOrigin="0.5,0.5" Color="ByProduct" Canvas.Left="932" Canvas.Top="478">
-            <Labels:Pipe.RenderTransform>
-                <TransformGroup>
-                    <ScaleTransform/>
-                    <SkewTransform/>
-                    <RotateTransform Angle="0"/>
-                    <TranslateTransform/>
-                </TransformGroup>
-            </Labels:Pipe.RenderTransform>
-        </Labels:Pipe>
+        <Labels:Pipe HorizontalAlignment="Left" VerticalAlignment="Center" Width="50" StatusComponent="464-01-MA1" RenderTransformOrigin="0.5,0.5" Color="ByProduct" Canvas.Left="932" Canvas.Top="478"/>
         <Labels:Pipe HorizontalAlignment="Left" VerticalAlignment="Center" Width="32" StatusComponent="464-01-MA1" RenderTransformOrigin="0.5,0.5" Color="ByProduct" Canvas.Left="964" Canvas.Top="492">
             <Labels:Pipe.RenderTransform>
                 <TransformGroup>
@@ -150,7 +122,7 @@
                 <TransformGroup>
                     <ScaleTransform/>
                     <SkewTransform/>
-                    <RotateTransform Angle="89.9"/>
+                    <RotateTransform Angle="90"/>
                     <TranslateTransform/>
                 </TransformGroup>
             </Labels:Pipe.RenderTransform>
@@ -160,13 +132,26 @@
                 <TransformGroup>
                     <ScaleTransform/>
                     <SkewTransform/>
-                    <RotateTransform Angle="89.9"/>
+                    <RotateTransform Angle="90"/>
                     <TranslateTransform/>
                 </TransformGroup>
             </Labels:Pipe.RenderTransform>
         </Labels:Pipe>
         <Labels:Pipe HorizontalAlignment="Left" VerticalAlignment="Center" Width="144" Color="Water" StatusComponent="477-01-MA1" VisibilityComponent="477-23-CV1" Canvas.Left="1228" Canvas.Top="511"/>
-        <Rectangle HorizontalAlignment="Left" Height="0" Stroke="Black" VerticalAlignment="Center" Width="50" Canvas.Left="905" Canvas.Top="510"/>
+        <Labels:Pipe Width="202" StatusComponent="460-03-MA1" PipeHeight="Medium" Canvas.Left="814" Canvas.Top="169" HorizontalAlignment="Left" VerticalAlignment="Center"/>
+        <Labels:Pipe Width="198" StatusComponent="456-01-MA1" PipeHeight="Medium" Canvas.Left="302" Canvas.Top="168" HorizontalAlignment="Left" VerticalAlignment="Center"/>
+        <Labels:Pipe Width="228" Color="Water" StatusComponent="473-01-MA1" Canvas.Left="241" Canvas.Top="208" HorizontalAlignment="Left" VerticalAlignment="Center"/>
+        <Labels:Pipe Width="80" StatusComponent="463-01-MA1" PipeHeight="Medium" RenderTransformOrigin="0.5,0.5" Canvas.Left="1108" Canvas.Top="348" HorizontalAlignment="Left" VerticalAlignment="Center">
+            <Labels:Pipe.RenderTransform>
+                <TransformGroup>
+                    <ScaleTransform/>
+                    <SkewTransform/>
+                    <RotateTransform Angle="90"/>
+                    <TranslateTransform/>
+                </TransformGroup>
+            </Labels:Pipe.RenderTransform>
+        </Labels:Pipe>
+        <Labels:Pipe Width="155" StatusComponent="466-01-MA1" PipeHeight="Medium" Canvas.Left="1287" Canvas.Top="390" HorizontalAlignment="Left" VerticalAlignment="Center"/>
         <Rectangle HorizontalAlignment="Left" Height="35" Stroke="Black" VerticalAlignment="Center" Width="2" Canvas.Left="559" Canvas.Top="586"/>
         <Rectangle HorizontalAlignment="Left" Height="46" Stroke="Black" VerticalAlignment="Center" Width="6" Fill="#FFBDBDBD" RenderTransformOrigin="0.5,0.5" Canvas.Left="1143" Canvas.Top="610">
             <Rectangle.RenderTransform>
@@ -184,7 +169,7 @@
                 <TransformGroup>
                     <ScaleTransform ScaleX="0.5" ScaleY="0.5"/>
                     <SkewTransform/>
-                    <RotateTransform Angle="0"/>
+                    <RotateTransform/>
                     <TranslateTransform/>
                 </TransformGroup>
             </Machines:CV_Valve.RenderTransform>
@@ -219,16 +204,7 @@
                 </TransformGroup>
             </Machines:EXC_HeatExchanger.RenderTransform>
         </Machines:EXC_HeatExchanger>
-        <Machines:WaterPump HorizontalAlignment="Center" VerticalAlignment="Top" Height="45" Width="46" RenderTransformOrigin="0.5,0.5" Color="Water" Canvas.Left="966" Canvas.Top="713">
-            <Machines:WaterPump.RenderTransform>
-                <TransformGroup>
-                    <ScaleTransform/>
-                    <SkewTransform/>
-                    <RotateTransform/>
-                    <TranslateTransform/>
-                </TransformGroup>
-            </Machines:WaterPump.RenderTransform>
-        </Machines:WaterPump>
+        <Machines:WaterPump HorizontalAlignment="Center" VerticalAlignment="Top" Height="45" Width="46" RenderTransformOrigin="0.5,0.5" Color="Water" Canvas.Left="966" Canvas.Top="713"/>
         <Machines:WaterPump HorizontalAlignment="Left" VerticalAlignment="Top" Height="44" Width="46" RenderTransformOrigin="0.5,0.5" Color="Water" Canvas.Left="482" Canvas.Top="728">
             <Machines:WaterPump.RenderTransform>
                 <TransformGroup>
@@ -240,79 +216,33 @@
             </Machines:WaterPump.RenderTransform>
         </Machines:WaterPump>
         <Machines:Waste HorizontalAlignment="Left" VerticalAlignment="Center" Height="46" Width="44" Canvas.Left="958" Canvas.Top="488"/>
-        <Labels:DeviceLabel HorizontalAlignment="Left" 
-            VerticalAlignment="Center" 
-            ComponentName="470-44-FT1" Canvas.Left="515" Canvas.Top="548"/>
-        <Labels:DeviceLabel HorizontalAlignment="Left" 
-            VerticalAlignment="Center" 
-            ComponentName="477-21-CV1" Canvas.Left="1029" Canvas.Top="549"/>
-        <Labels:DeviceLabel HorizontalAlignment="Left" 
-            VerticalAlignment="Center" 
-            ComponentName="470-21-CV1" Canvas.Left="392" Canvas.Top="548"/>
-        <Labels:DeviceLabel HorizontalAlignment="Left" 
-            VerticalAlignment="Center" 
-            ComponentName="473-01-MA1" Canvas.Left="460" Canvas.Top="671"/>
-        <Labels:DeviceLabel HorizontalAlignment="Left" 
-            VerticalAlignment="Center" 
-            ComponentName="477-01-MA1" Canvas.Left="944" Canvas.Top="656"/>
-        <Labels:DeviceLabel HorizontalAlignment="Left" 
-            VerticalAlignment="Center" 
-            ComponentName="477-23-CV1" Canvas.Left="1175" Canvas.Top="435"/>
-        <Labels:JumpLabel HorizontalAlignment="Left" 
-            VerticalAlignment="Center" 
-            JumpFromLabel="456-01-MA1" 
-            JumpToLabel="455-01-MA1" Canvas.Left="23" Canvas.Top="39"/>
-        <Labels:DetailsLabel HorizontalAlignment="Center" VerticalAlignment="Top" ComponentName="474-HEAT" DetailsPageName="D474" Canvas.Left="157" Canvas.Top="477"/>
-        <Labels:JumpLabel 
-            JumpFromLabel="477-01-MA1" 
-            JumpToLabel="283-01-MA1" Canvas.Left="1309" Canvas.Top="479" HorizontalAlignment="Left" VerticalAlignment="Center"/>
-        <Labels:Pipe Width="202" StatusComponent="460-03-MA1" PipeHeight="Medium" Canvas.Left="814" Canvas.Top="169" HorizontalAlignment="Left" VerticalAlignment="Center"/>
-        <Labels:Pipe Width="198" StatusComponent="456-01-MA1" PipeHeight="Medium" Canvas.Left="302" Canvas.Top="168" HorizontalAlignment="Left" VerticalAlignment="Center"/>
-        <Labels:Pipe Width="228" Color="Water" StatusComponent="473-01-MA1" Canvas.Left="241" Canvas.Top="208" HorizontalAlignment="Left" VerticalAlignment="Center"/>
         <Machines:STR_Washing_reactor_B Height="217" Width="170" Canvas.Left="430" Canvas.Top="113" HorizontalAlignment="Left" VerticalAlignment="Center"/>
-        <Labels:DeviceLabel 
-            ComponentName="460-01-MA1" Canvas.Left="470" Canvas.Top="69" HorizontalAlignment="Left" VerticalAlignment="Center"/>
         <Machines:STR_Washing_reactor_B Height="217" Width="170" Canvas.Left="552" Canvas.Top="113" HorizontalAlignment="Left" VerticalAlignment="Center"/>
-        <Labels:DeviceLabel 
-            ComponentName="460-02-MA1" Canvas.Left="592" Canvas.Top="69" HorizontalAlignment="Left" VerticalAlignment="Center"/>
         <Machines:STR_Washing_reactor_B Height="217" Width="170" Canvas.Left="674" Canvas.Top="113" HorizontalAlignment="Left" VerticalAlignment="Center"/>
-        <Labels:DeviceLabel 
-            ComponentName="460-03-MA1" Canvas.Left="714" Canvas.Top="69" HorizontalAlignment="Left" VerticalAlignment="Center"/>
         <Machines:SCW_ScrewConveyor_straight Height="22" Width="166" Canvas.Left="144" Canvas.Top="162" HorizontalAlignment="Left" VerticalAlignment="Top"/>
-        <Labels:DeviceLabel 
-            ComponentName="456-01-MA1" Canvas.Left="257" Canvas.Top="104" HorizontalAlignment="Center" VerticalAlignment="Top" />
-        <Labels:Pipe Width="80" StatusComponent="463-01-MA1" PipeHeight="Medium" RenderTransformOrigin="0.5,0.5" Canvas.Left="1108" Canvas.Top="348" HorizontalAlignment="Left" VerticalAlignment="Center">
-            <Labels:Pipe.RenderTransform>
-                <TransformGroup>
-                    <ScaleTransform/>
-                    <SkewTransform/>
-                    <RotateTransform Angle="90"/>
-                    <TranslateTransform/>
-                </TransformGroup>
-            </Labels:Pipe.RenderTransform>
-        </Labels:Pipe>
-        <Labels:Pipe Width="155" StatusComponent="466-01-MA1" PipeHeight="Medium" Canvas.Left="1287" Canvas.Top="390" HorizontalAlignment="Left" VerticalAlignment="Center"/>
         <Machines:SCW_ScrewConveyor_straight Height="22" Width="166" Canvas.Left="1140" Canvas.Top="384" HorizontalAlignment="Left" VerticalAlignment="Top"/>
-        <Labels:DeviceLabel 
-            ComponentName="466-01-MA1" Canvas.Left="1252" Canvas.Top="323" HorizontalAlignment="Left" VerticalAlignment="Center" />
-        <Labels:JumpLabel 
-            JumpFromLabel="466-01-MA1" 
-            JumpToLabel="510-01-MA1" Canvas.Left="1414" Canvas.Top="361" HorizontalAlignment="Left" VerticalAlignment="Center"/>
-        <Labels:DeviceLabel 
-            ComponentName="460-61-LS1" Canvas.Left="469" Canvas.Top="203" HorizontalAlignment="Left" VerticalAlignment="Top"/>
         <Machines:V01_WCE_Centrifuge Canvas.Left="974" Canvas.Top="149" Height="174" Width="192" HorizontalAlignment="Left" VerticalAlignment="Center"/>
         <Machines:V01_VB_VibratingScreen Canvas.Left="851" Canvas.Top="469" Height="100" Width="100" HorizontalAlignment="Center" VerticalAlignment="Top"/>
-        <Labels:DeviceLabel HorizontalAlignment="Left" 
-            VerticalAlignment="Center" 
-            ComponentName="464-01-MA1" Canvas.Left="856" Canvas.Top="549"/>
         <Machines:V01_VRC_WaterTank Canvas.Left="580" Canvas.Top="671" Height="133" Width="244" HorizontalAlignment="Center" VerticalAlignment="Top" ComponentName="470-41-LT1" TrendName="LEVEL"/>
-        <Labels:DeviceLabel HorizontalAlignment="Left" 
-            VerticalAlignment="Center" 
-            ComponentName="470-42-TT1" Canvas.Left="712" Canvas.Top="709"/>
-        <Labels:DeviceLabel HorizontalAlignment="Left" 
-            VerticalAlignment="Center" 
-            ComponentName="470-41-LT1" Canvas.Left="602" Canvas.Top="709"/>
-        <Labels:DeviceLabel 
-            ComponentName="463-01-MA1" Canvas.Left="1140" Canvas.Top="122" HorizontalAlignment="Left" VerticalAlignment="Top"/>
+        <Labels:JumpLabel HorizontalAlignment="Left" VerticalAlignment="Center" JumpFromLabel="456-01-MA1" JumpToLabel="455-01-MA1" Canvas.Left="23" Canvas.Top="39"/>
+        <Labels:JumpLabel JumpFromLabel="477-01-MA1" JumpToLabel="283-01-MA1" Canvas.Left="1309" Canvas.Top="479" HorizontalAlignment="Left" VerticalAlignment="Center"/>
+        <Labels:JumpLabel JumpFromLabel="466-01-MA1" JumpToLabel="510-01-MA1" Canvas.Left="1414" Canvas.Top="361" HorizontalAlignment="Left" VerticalAlignment="Center"/>
+        <Labels:DetailsLabel HorizontalAlignment="Center" VerticalAlignment="Top" ComponentName="474-HEAT" DetailsPageName="D474" Canvas.Left="157" Canvas.Top="477"/>
+        <Labels:DeviceLabel HorizontalAlignment="Left" VerticalAlignment="Center" ComponentName="470-44-FT1" Canvas.Left="515" Canvas.Top="548"/>
+        <Labels:DeviceLabel HorizontalAlignment="Left" VerticalAlignment="Center" ComponentName="477-21-CV1" Canvas.Left="1029" Canvas.Top="549"/>
+        <Labels:DeviceLabel HorizontalAlignment="Left" VerticalAlignment="Center" ComponentName="470-21-CV1" Canvas.Left="392" Canvas.Top="548"/>
+        <Labels:DeviceLabel HorizontalAlignment="Left" VerticalAlignment="Center" ComponentName="473-01-MA1" Canvas.Left="460" Canvas.Top="671"/>
+        <Labels:DeviceLabel HorizontalAlignment="Left" VerticalAlignment="Center" ComponentName="477-01-MA1" Canvas.Left="944" Canvas.Top="656"/>
+        <Labels:DeviceLabel HorizontalAlignment="Left" VerticalAlignment="Center" ComponentName="477-23-CV1" Canvas.Left="1175" Canvas.Top="435"/>
+        <Labels:DeviceLabel ComponentName="460-01-MA1" Canvas.Left="470" Canvas.Top="69" HorizontalAlignment="Left" VerticalAlignment="Center"/>
+        <Labels:DeviceLabel ComponentName="460-02-MA1" Canvas.Left="592" Canvas.Top="69" HorizontalAlignment="Left" VerticalAlignment="Center"/>
+        <Labels:DeviceLabel ComponentName="460-03-MA1" Canvas.Left="714" Canvas.Top="69" HorizontalAlignment="Left" VerticalAlignment="Center"/>
+        <Labels:DeviceLabel ComponentName="456-01-MA1" Canvas.Left="257" Canvas.Top="104" HorizontalAlignment="Center" VerticalAlignment="Top" />
+        <Labels:DeviceLabel ComponentName="466-01-MA1" Canvas.Left="1252" Canvas.Top="323" HorizontalAlignment="Left" VerticalAlignment="Center" />
+        <Labels:DeviceLabel ComponentName="460-61-LS1" Canvas.Left="469" Canvas.Top="203" HorizontalAlignment="Left" VerticalAlignment="Top"/>
+        <Labels:DeviceLabel HorizontalAlignment="Left" VerticalAlignment="Center" ComponentName="464-01-MA1" Canvas.Left="856" Canvas.Top="549"/>
+        <Labels:DeviceLabel HorizontalAlignment="Left" VerticalAlignment="Center" ComponentName="470-42-TT1" Canvas.Left="712" Canvas.Top="709"/>
+        <Labels:DeviceLabel HorizontalAlignment="Left" VerticalAlignment="Center" ComponentName="470-41-LT1" Canvas.Left="602" Canvas.Top="709"/>
+        <Labels:DeviceLabel ComponentName="463-01-MA1" Canvas.Left="1140" Canvas.Top="122" HorizontalAlignment="Left" VerticalAlignment="Top"/>
     </Canvas>
 </UserControl>
